--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,21 @@
 {
-  //   "parser": "@typescript-eslint/parser",
-  //   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  //   "parserOptions": {
-  //     "ecmaVersion": 2020,
-  //     "sourceType": "module"
-  //   },
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "plugin:prettier/recommended",
+    "prettier",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "semi": ["error", "always"]
-    // "quotes": ["error", "single"]
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"],
+    "no-multi-spaces": "error",
+    "no-multiple-empty-lines": "error",
+    "prettier/prettier": ["error", { "endOfLine": "auto" }]
   }
 }
