--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "lint": "ts-standard",
+    "lint": "npx eslint . --fix",
     "dev": "cross-env NODE_ENV=development ts-node-dev src/server.ts",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test -- --watch",
@@ -26,11 +26,15 @@
     "@types/jest": "^29.5.12",
     "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.1",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
-    "ts-jest": "^29.1.4"
+    "eslint": "^8.57.0"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -38,16 +42,6 @@
     },
     "extends": [
       "./node_modules/ts-standard/eslintrc.json"
-    ],
-    "rules": {
-      "semi": [
-        "error",
-        "always"
-      ],
-      "quotes": [
-        "error",
-        "single"
-      ]
-    }
+    ]
   }
 }
